--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -5,27 +5,23 @@
 {% block body %}
     <h1>Register</h1>
 
-    {{ form_errors(registrationForm) }}
-    
     {{ form_start(registrationForm) }}
+        {{ form_errors(registrationForm) }}
     
         {{ form_row(registrationForm.last_name) }}
 
         {{ form_row(registrationForm.first_name) }}
 
-        {{ form_row(registrationForm.gender) }}
-        {{ form_row(registrationForm.birthDate) }}
+        {# {{ form_row(registrationForm.gender) }}
+        {{ form_row(registrationForm.birthDate) }} #}
         {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.phone) }}
+        {# {{ form_row(registrationForm.phone) }}
         {{ form_row(registrationForm.adress) }}
         {{ form_row(registrationForm.postcode) }}
-        {{ form_row(registrationForm.city) }}
+        {{ form_row(registrationForm.city) }} #}
 
         {{ form_row(registrationForm.plainPassword) }}
-        {{ form_errors(registrationForm.plainPassword) }}
-
         {{ form_row(registrationForm.agreeTerms) }}
-        {{ form_errors(registrationForm.agreeTerms) }}
 
         <button type="submit" class="btn btn-primary">Register</button>
     {{ form_end(registrationForm) }}
