--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,6 +4,15 @@
 
 {% block body %}
 <form method="post">
+    {# read and display all flash messages #}
+    {% for label, messages in app.flashes %}
+        {% for message in messages %}
+            <div class="flash-{{ label }}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endfor %}
+
     {% if error %}
         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
@@ -16,7 +25,7 @@
 
     <h1 class="h3 mb-3 font-weight-normal">Please log in</h1>
     <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" required>
+    <input type="email" name="email" id="inputEmail" class="form-control" required>
     <label for="inputPassword">Password</label>
     <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 
@@ -29,7 +38,7 @@
     </button>
 </form>
 
-<a href="{{ path('app_forgot')}}">
+<a href="{{ path('forgot_password')}}">
     <p>I forgot my password</p>
 </a>
 
