--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,8 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Log in{% endblock %}
+{% block metadesc %}Log into your account{% endblock %}
+
 
 {% block body %}
 <form method="post">
