--- a/templates/security/reset_password_request.html.twig
+++ b/templates/security/reset_password_request.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Forgot{% endblock %}
+{% block title %}Forgot password{% endblock %}
+{% block metadesc %}Reset your password{% endblock %}
 
 {% block body %}
 
@@ -8,6 +9,7 @@
     
     {{ form_start(requestPassForm) }}
         {{ form_row(requestPassForm.email) }}
+        
         <button type="submit" class="btn btn-primary" >Submit</button>
  
     {{ form_end(requestPassForm) }}
