--- a/templates/session/index.html.twig
+++ b/templates/session/index.html.twig
@@ -1,6 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello SessionController!{% endblock %}
+{% block title %}All of our incoming sessions{% endblock %}
+{% block metadesc %}Log into your account{% endblock %}
+
 
 {% block body %}
 <style>
