--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,12 +2,12 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="description" content="{% block metadesc %}{% endblock %}">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {% block stylesheets %}
+            <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
             <link rel="stylesheet" href="{{ asset('css/style.css') }}">
-            {# {{ ux_controller_link_tags() }} #}
         {% endblock %}
 
 
@@ -15,35 +15,60 @@
 
     <body>
         {% block header %}
-
-            <a href="{{path('app_home')}}">
-                <p>Home</p>
-            </a>
-
-            {% if app.user %}
-                <a href="{{path('app_logout')}}">
-                    <p>Logout</p>
+            <header>
+                <a href="{{ path('app_home') }}">
+                Home
                 </a>
 
-                <a href="{{path('details_user')}}">
-                    <p>Profile</p>
-                </a>
-            {% else %}
-                <a href="{{path('app_register')}}">
-                    <p>Register</p>
-                </a>
+                {% if app.user %}
+                    <ul>
+                        <li>
+                            <a href="{{ path('app_formation') }}">Formations</a>
+                        </li>
 
-                <a href="{{path('app_login')}}">
-                    <p>Login</p>
-                </a>
-            {% endif %}
+                        <li>
+                            <a href="">Students</a>
+                        </li>
 
+                        <li>
+                            <a href="">Tags</a>
+                        </li>
+                        
+                        {% if is_granted("ROLE_ADMIN") %}
+                        <li>
+                            <a href="">Panel admin</a>
+                        </li>                
+                        {% endif %}
+                    </ul>
+                    
+                    <a href="{{ path('app_logout') }}">
+                        Logout
+                    </a>
+
+                    <a href="{{ path('details_user') }}">
+                        Profile
+                    </a>
+
+                {% else %}
+                    <a href="{{ path('app_register') }}">
+                        Register
+                    </a>
+
+                    <a href="{{ path('app_login') }}">
+                        Login
+                    </a>
+                {% endif %}
+                
+            </header>
         {% endblock %}  
 
-        {% block body %}{% endblock %}        
-        
+        <div id="wrapper">
+
+            {% block body %}{% endblock %}        
+            
+        </div>
+
         {% block javascripts %}
-            {# {% block importmap %}{{ importmap('app') }}{% endblock %} #}
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
         {% endblock %}
