--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,9 +1,37 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}HomePage{% endblock %}
+{% block metadesc %}My home page{% endblock %}
 
 {% block body %}
+    <h2>Welcome {{ app.user }}</h1>
 
-    <h1>Welcome {{ app.user }}</h1>
+    <h1>Home Page</h1>
+
+        {% if is_granted('ROLE_ADMIN') %}
+        <div class="create-entities">
+
+            <a href="">Create session +</a>
+            <a href="">Create formation +</a>
+            <a href="">Create tag +</a>
+        </div>
+        {% endif %}
+
+
+    <div id="home-formation">
+        <h2>Our formations</h2>
+        {% for formation in formations %}
+
+            <div class="home-formation-block">
+                <a href="">
+                    <strong>{{ formation }}</strong>
+                </a>
+
+            </div>
+
+        {% endfor %}
+
+    </div>
+    
 
 {% endblock %}
