--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -9,18 +9,17 @@
         {{ form_errors(registrationForm) }}
     
         {{ form_row(registrationForm.last_name) }}
-
         {{ form_row(registrationForm.first_name) }}
 
-        {# {{ form_row(registrationForm.gender) }}
-        {{ form_row(registrationForm.birthDate) }} #}
+        {{ form_row(registrationForm.birthDate) }}
         {{ form_row(registrationForm.email) }}
-        {# {{ form_row(registrationForm.phone) }}
+        {{ form_row(registrationForm.phone) }}
         {{ form_row(registrationForm.adress) }}
         {{ form_row(registrationForm.postcode) }}
-        {{ form_row(registrationForm.city) }} #}
+        {{ form_row(registrationForm.city) }}
 
         {{ form_row(registrationForm.plainPassword) }}
+        
         {{ form_row(registrationForm.agreeTerms) }}
 
         <button type="submit" class="btn btn-primary">Register</button>
