--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -12,7 +12,7 @@
         <div class="create-entities">
 
             <a href="">Create session +</a>
-            <a href="">Create formation +</a>
+            <a href="{{ path('create_formation') }}">Create formation +</a>
             <a href="">Create tag +</a>
         </div>
         {% endif %}
