--- a/templates/formation/index.html.twig
+++ b/templates/formation/index.html.twig
@@ -6,7 +6,7 @@
 {% block body %}
 
     {% if is_granted('ROLE_ADMIN') %}
-        <a href="">Create formation +</a>
+        <a href="{{ path('create_formation') }}">Create formation +</a>
     {% endif %} 
 
     <div id="formation-list">
