--- a/templates/security/password_reset_email.html.twig
+++ b/templates/security/password_reset_email.html.twig
@@ -2,7 +2,7 @@
 <h1>Hi!{{ fullName }}</h1>
 
 <p>
-    To reinitialize your password click <a href="{{ signedUrl|raw }}">h e r e {{ signedUrl|raw }}</a>
+    To reinitialize your password click on this link -> <a href="{{ signedUrl|raw }}"> [ h e r e ] {{ signedUrl|raw }}</a>
 </p>
 
 <p>
