--- a/templates/session/create.html.twig
+++ b/templates/session/create.html.twig
@@ -6,7 +6,7 @@
 
 {% block body %}
 
-    <h1>Create a session</h1>
+    <h1 class="primary-title">Create a session</h1>
 
     {# read and display all flash messages #}
     {% for label, messages in app.flashes %}
