--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,7 +31,7 @@
                         </li>
 
                         <li>
-                            <a href="{{ path('app_tag') }}">Tags</a>
+                            <a href="{{ path('app_tag') }}">Tags and Modules</a>
                         </li>
 
                         <li>
