--- a/templates/user/details.html.twig
+++ b/templates/user/details.html.twig
@@ -5,7 +5,7 @@
 {% block title %}{{ user }} profile{% endblock %}
 
 {% block body %}
-<h1>{{ user }}</h1>
+<h1 class="primary-title">{{ user }}</h1>
 <ul>
     <li>{{ user.formatedBirthDate }} ({{ user.showAge }})</li>
     <li>{{ user.email }}</li>
