--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,59 +15,43 @@
 
     <body>
         {% block header %}
-            <header>
-                <a href="{{ path('app_home') }}">
-                    Home
+        <header>
+            <a href="{{ path('app_home') }}">Home</a>
+
+            {% if app.user %}
+                
+                <a href="{{ path('app_formation') }}">Formations</a>
+                            
+                <a href="{{ path('app_session') }}">Sessions</a>
+                            
+                <a href="{{ path('app_tag') }}">Tags and Modules</a>
+            
+                <a href="{{ path('app_user') }}">Students</a>
+        
+                <a href="{{ path('app_logout') }}">
+                    Logout
                 </a>
 
-                {% if app.user %}
-                    <ul>
-                        <li>
-                            <a href="{{ path('app_formation') }}">Formations</a>
-                        </li>
+            {% else %}
+                <a href="{{ path('app_register') }}">
+                    Register
+                </a>
 
-                        <li>
-                            <a href="{{ path('app_session') }}">Sessions</a>
-                        </li>
-
-                        <li>
-                            <a href="{{ path('app_tag') }}">Tags and Modules</a>
-                        </li>
-
-                        <li>
-                            <a href="{{ path('app_user') }}">Students</a>
-                        </li>
-                        
-                        {% if is_granted("ROLE_ADMIN") %}
-                        <li>
-                            <a href="">Panel admin</a>
-                        </li>                
-                        {% endif %}
-                    </ul>
-                    
-                    <a href="{{ path('app_logout') }}">
-                        Logout
-                    </a>
-
-
-                {% else %}
-                    <a href="{{ path('app_register') }}">
-                        Register
-                    </a>
-
-                    <a href="{{ path('app_login') }}">
-                        Login
-                    </a>
-                {% endif %}
-                
-            </header>
-        {% endblock %}  
-
-        <div id="wrapper">
-
-            {% block body %}{% endblock %}        
+                <a href="{{ path('app_login') }}">
+                    Login
+                </a>
+            {% endif %}
             
-        </div>
+        </header>
+        {% endblock %}  
+        
+        <main>
+            <div id="wrapper">
+                
+                {% block body %}{% endblock %}        
+                
+            </div>
+        </main>
 
         {% block javascripts %}
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
