--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,16 +4,17 @@
 {% block metadesc %}My home page{% endblock %}
 
 {% block body %}
+    <h1 class="secondary-title">Home Page</h1>
+    
     <h2 class="primary-title">Welcome {{ app.user }}</h1>
 
-    <h1 class="secondary-title">Home Page</h1>
 
         {% if is_granted('ROLE_ADMIN') %}
         <div class="create-entities">
-            <a href="{{ path('create_formation') }}">Create formation +</a>
-            <a href="{{ path('create_session') }}">Create session +</a>
-            <a href="{{ path('create_module') }}">Create module +</a>
-            <a href="{{ path('create_tag') }}">Create tag +</a>
+            <a href="{{ path('create_formation') }}">Create formation <em>+</em></a>
+            <a href="{{ path('create_session') }}">Create session <em>+</em></a>
+            <a href="{{ path('create_module') }}">Create module <em>+</em></a>
+            <a href="{{ path('create_tag') }}">Create tag <em>+</em></a>
         </div>
         {% endif %}
 
