--- a/public/css/style.css
+++ b/public/css/style.css
@@ -97,7 +97,7 @@ header a {
 
 
 
-/************************* Table ************************/
+/************************* Table ***************************/
 /***********************************************************/
 .table-list {
     display: flex; 
@@ -108,8 +108,21 @@ header a {
     padding: 0.75rem 0;
     margin: 0;
     font-size: var(--font-size-p);
+    color: var(--secondary-color-text);
 
     flex: 1;
+}
+
+.row-unique {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+
+    text-align: center;
+
+    background-color: var(--secondary-background);
+
+    border-radius: 8px;
 }
 
 .table-row {
@@ -120,6 +133,8 @@ header a {
     text-align: center;
 
     background-color: var(--secondary-background);
+
+    position: relative;
 }
 
 .table-row:first-child {
@@ -144,6 +159,71 @@ header a {
     font-size: var(--font-size-title);
     font-weight: var(--weight-bold);
 }
+
+/* edit btn */
+.fa-pen-to-square { 
+    font-size: 22px;
+
+    color: var(--alert-color);
+    border: none;
+    border-radius: 50%;
+
+    position: absolute;
+    top: 25%;
+    right: 50px;
+}
+
+/* delete btn */
+.fa-xmark {
+    font-size: 28px;
+
+    color: var(--danger-color);
+    border: none;
+    border-radius: 50%;
+
+    position: absolute;
+    top: 20%;
+    right: 8px;
+}
+
+
+/************************* Grid ***************************/
+/**********************************************************/
+.wrapper-grid {
+    display: grid;
+
+
+    grid-template-columns: auto auto auto auto ;
+    grid-template-rows: auto auto auto auto auto auto auto auto auto auto ;
+    column-gap: 25px;
+    row-gap: 15px;
+}
+
+.wrapper-grid h1, .wrapper-grid h2{
+    grid-column: 1 / 6 ;
+    
+}
+
+.wrapper-grid a {
+    width: fit-content;
+
+}
+
+.wrapper-grid .row-unique {
+    grid-row: 4 / 4 ;
+    grid-column: 1 / 5 ;
+
+}
+
+.wrapper-grid #table-information {
+    grid-row: 4 / 6 ;
+    grid-column: 5 / 5;
+}
+
+.wrapper-grid #table-formation-module {
+    grid-column: 1 / 5;
+}
+
 
 /************************* HomePage ************************/
 /***********************************************************/
