--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,6 +33,8 @@ body {
 
     display: flex;
     flex-direction: row;
+
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
 }
 
 main {
@@ -82,7 +84,6 @@ header a:not(:first-child, :last-child) {
     transition: 0.3s;
 }
 
-
 header a:not(:first-child, :last-child):hover {
     color: var(--primary-color-text);
     transition: 0.3s;
@@ -95,8 +96,6 @@ header a {
     color: var(--secondary-color-text);
 }
 
-
-
 /************************* Table ***************************/
 /***********************************************************/
 .table-list {
@@ -106,7 +105,6 @@ header a {
 
 .table-item {
     padding: 0.75rem 0;
-    margin: 0;
     font-size: var(--font-size-p);
     color: var(--secondary-color-text);
 
@@ -186,12 +184,61 @@ header a {
     right: 8px;
 }
 
+/************************* Form ***************************/
+/**********************************************************/
+.form-create {
+    background-color: var(--secondary-background);
+    padding: 10px 25px;
+
+    /* border: 3px solid var(--primary-color); */
+    outline: 3px solid var(--primary-color);
+}
+
+.form-create div {
+    display: flex;
+    flex-direction: column;
+
+    margin-bottom: 15px ;
+}
+
+.form-create div label {
+    color: var(--primary-color-text);
+    font-size: 20px;
+}
+
+[class*="form-input"] {
+    height: 45px;
+    font-size: 17px;
+}
+
+.form-input-text {
+
+}
+
+.form-input-date {
+
+}
+
+.form-input-select {
+
+}
+
+.form-btn-submit {
+    width: 80px;
+    height: 35px;
+
+    color: var(--secondary-color-text);
+    background-color: var(--primary-color);
+    border: 0;
+    border-radius: 5px;
+
+    font-size: 16px;
+}
 
 /************************* Grid ***************************/
 /**********************************************************/
 .wrapper-grid {
     display: grid;
-
 
     grid-template-columns: auto auto auto auto ;
     grid-template-rows: auto auto auto auto auto auto auto auto auto auto ;
@@ -206,7 +253,6 @@ header a {
 
 .wrapper-grid a {
     width: fit-content;
-
 }
 
 .wrapper-grid .row-unique {
