update css (added grid layout)

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -44,7 +44,7 @@
         {% endblock %}  
         
         <main>
-            <div id="wrapper">
+            <div id="wrapper" class="wrap-{% block pageWrapper %}{% endblock %}">
                 
                 {% block body %}{% endblock %}        
                 
