--- a/templates/security/reset_password_request.html.twig
+++ b/templates/security/reset_password_request.html.twig
@@ -2,6 +2,8 @@
 
 {% block title %}Forgot password{% endblock %}
 {% block metadesc %}Reset your password{% endblock %}
+{% block pageWrapper %}login-resest{% endblock %}
+
 
 {% block body %}
 
