--- a/templates/session/create.html.twig
+++ b/templates/session/create.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Create a session{% endblock %}
-
 {% block metadesc %}Create a session via the form{% endblock %}
+{% block pageWrapper %}create-session{% endblock %}
 
 {% block body %}
 
@@ -17,16 +17,17 @@
         {% endfor %}
     {% endfor %}
 
-        {{ form_start(createSessionForm) }}
-            {{ form_errors(createSessionForm) }}
-            
+
+    {{ form_start(createSessionForm) }}
+        {{ form_errors(createSessionForm) }}
+
             {{ form_row(createSessionForm.Formation) }}
             {{ form_row(createSessionForm.title) }}
             {{ form_row(createSessionForm.nb_place) }}
             {{ form_row(createSessionForm.dateStart) }}
             {{ form_row(createSessionForm.dateEnd) }}
-            
-            <button type="submit" class="form-btn-submit" >Submit</button>
-        {{ form_end(createSessionForm) }}
-
+        
+        <button type="submit" class="form-btn-submit" >Submit</button>
+    {{ form_end(createSessionForm) }}
+    
 {% endblock %}
