--- a/templates/session/update.html.twig
+++ b/templates/session/update.html.twig
@@ -3,6 +3,8 @@
 {% block title %}Update a session{% endblock %}
 
 {% block metadesc %}Update a session via the form{% endblock %}
+{% block pageWrapper %}update-session{% endblock %}
+
 
 {% block body %}
 
