--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,9 @@
     --primary-color-text: #29c7aa;
     --secondary-color-text: #ffffff;
 
+    --hover-color: #20a38b;
+    --active-color:#12574a;
+    
     --primary-background: #131E1C;
     --secondary-background: #0A2E27;
 
@@ -39,12 +42,6 @@ body {
 
 main {
     flex: 5;
-}
-
-#wrapper {
-    padding: 0 5%;
-    color: var(--secondary-color-text);
-
 }
 
 .primary-title {
@@ -87,7 +84,6 @@ header a:not(:first-child, :last-child) {
 header a:not(:first-child, :last-child):hover {
     color: var(--primary-color-text);
     transition: 0.3s;
-
 }
 
 header a {
@@ -95,6 +91,37 @@ header a {
     text-decoration: none;
     color: var(--secondary-color-text);
 }
+
+/************************* Wrapper ***************************/
+/*************************************************************/
+#wrapper {
+    margin: 25px 0;
+    /* display: grid;
+
+    grid-template-columns: 15% 15% 15% 15% 15% 15%;
+    grid-template-rows: auto;
+
+    column-gap: 25px;
+    row-gap: 15px;*/
+
+    padding: 0 3%;
+    color: var(--secondary-color-text);
+}
+
+#wrapper a {
+    text-decoration: none;
+    color: var(--secondary-color-text);
+
+    transition: 0.3s;
+}
+
+#wrapper a:hover {
+    text-decoration: none;
+    color: var(--primary-color-text);
+
+    transition: 0.3s;
+}
+
 
 /************************* Table ***************************/
 /***********************************************************/
@@ -184,21 +211,27 @@ header a {
     right: 8px;
 }
 
-/************************* Form ***************************/
-/**********************************************************/
+
+/************************* Form (flex + grid) ***************************/
+/**************************************************************/
 .form-create {
     background-color: var(--secondary-background);
     padding: 10px 25px;
 
-    /* border: 3px solid var(--primary-color); */
-    outline: 3px solid var(--primary-color);
+    border: 5px solid var(--primary-color);
+    border-radius: 3px;   
+
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+
+    column-gap: 25px;
+    row-gap: 15px;
 }
 
 .form-create div {
     display: flex;
     flex-direction: column;
-
-    margin-bottom: 15px ;
 }
 
 .form-create div label {
@@ -211,12 +244,21 @@ header a {
     font-size: 17px;
 }
 
-.form-input-text {
+.form-input-text { /* input text / number */
+     
+}
+
+.form-input-date { /* date / dateTime */
 
 }
 
-.form-input-date {
+.form-create div:not(:has(>.form-input-date)) { /* affect all div that doesn't have a date input */
+    grid-column: 1 / 5;
+}
 
+.form-create div:has(>.form-input-date) { /* affect all div that do have a date input */
+    grid-row: 4;
+    grid-column: span 2;
 }
 
 .form-input-select {
@@ -233,41 +275,59 @@ header a {
     border-radius: 5px;
 
     font-size: 16px;
+
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.form-btn-submit:hover {
+    background-color: var(--hover-color);
+    transition: 0.3s;
+}
+
+.form-btn-submit:active {
+    background-color: var(--active-color);
+    transition: 0.3s;
 }
 
 /************************* Grid ***************************/
 /**********************************************************/
-.wrapper-grid {
+.wrap-details-session {
+    margin: 25px 0;
     display: grid;
 
-    grid-template-columns: auto auto auto auto ;
-    grid-template-rows: auto auto auto auto auto auto auto auto auto auto ;
+    grid-template-columns: 15% 15% 15% 15% 15% 15%;
+    grid-template-rows: auto;
+
     column-gap: 25px;
     row-gap: 15px;
+
+    padding: 0 3%;
+    color: var(--secondary-color-text);
+}
+.wrap-details-session h1 {
+    grid-column: 1 / span 3;
 }
 
-.wrapper-grid h1, .wrapper-grid h2{
-    grid-column: 1 / 6 ;
-    
+.wrap-details-session h2 {
+    grid-column: 1 / span 3;
 }
 
-.wrapper-grid a {
-    width: fit-content;
+.wrap-details-session .form-create {
+    grid-column: 1 / span 6;
 }
 
-.wrapper-grid .row-unique {
-    grid-row: 4 / 4 ;
-    grid-column: 1 / 5 ;
-
+.wrap-details-session .row-unique {
+    grid-column: 1 / span 4;
 }
 
-.wrapper-grid #table-information {
-    grid-row: 4 / 6 ;
-    grid-column: 5 / 5;
+.wrap-details-session #table-information {
+    grid-column: 5 / span 2;
+    grid-row: 4 / span 3 ;
 }
 
-.wrapper-grid #table-formation-module {
-    grid-column: 1 / 5;
+.wrap-details-session #table-formation-module {
+    grid-column: 1 / span 4;
 }
 
 
