--- a/templates/security/reset_password.html.twig
+++ b/templates/security/reset_password.html.twig
@@ -1,6 +1,8 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Change password{% endblock %}
+{% block metadesc %}Reset your password{% endblock %}
+{% block pageWrapper %}login-resest{% endblock %}
 
 {% block body %}
 
