--- a/templates/tag/create.html.twig
+++ b/templates/tag/create.html.twig
@@ -3,6 +3,8 @@
 {% block title %}Create a tag{% endblock %}
 
 {% block metadesc %}Create a tag via the form{% endblock %}
+{% block pageWrapper %}create-tag{% endblock %}
+
 
 {% block body %}
 
@@ -19,11 +21,16 @@
         {% endfor %}
     {% endfor %}
 
+<div class="form-create">
     {{ form_start(createTagForm) }}
         {{ form_errors(createTagForm) }}
-        {{ form_row(createTagForm.label) }}
 
-        <button type="submit" class="btn btn-primary" >Submit</button>
+        <div class="form-content">
+            {{ form_row(createTagForm.label) }}
+        </div>
+        
+        <button type="submit" class="form-btn-submit" >Submit</button>
     {{ form_end(createTagForm) }}
+</div>
 
 {% endblock %}
