--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -1,6 +1,8 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}User!{% endblock %}
+{% block metadesc %}List of all our users{% endblock %}
+{% block pageWrapper %}index-user{% endblock %}
 
 {% block body %}
 <div>
